# BetsReportBot

./: .gitignore  main.py  pyproject.toml
db/: database.py  db_service.py  models.py
db/queries/: __init__.py  accs_queries.py  daily_balance.py  daily_stat.py  stat_queries.py
handlers/: __init__.py  daily_stats.py  echo_handler.py  get_excel_handler.py  user_commands.py
keyboards/: keyboard.py
utils/: create_xlsx.py  states.py
